Add patient reminder settings to API
