# apps/api/internal/features/patients/model.go
@@ -3,17 +3,20 @@ package patients
 import "time"
 
 type Patient struct {
-	ID              string
-	ClinicID        string
-	FullName        string
-	Phone           string
-	Status          string
-	TreatmentNote   string
-	InternalNote    string
-	CreatedByUserID string
-	UpdatedByUserID string
-	CreatedAt       time.Time
-	UpdatedAt       time.Time
-	DeletedAt       *time.Time
-	NextAppointment *time.Time
+	ID                 string
+	ClinicID           string
+	FullName           string
+	Phone              string
+	Status             string
+	TreatmentNote      string
+	InternalNote       string
+	RemindersEnabled   bool
+	ReminderDaysBefore []int
+	ReminderSendHour   int
+	CreatedByUserID    string
+	UpdatedByUserID    string
+	CreatedAt          time.Time
+	UpdatedAt          time.Time
+	DeletedAt          *time.Time
+	NextAppointment    *time.Time
 }
